# Nexaloid

./: .gitignore  README.md  README.zh-CN.md  SECURITY_REMEDIATION_2026-07-21.md
.github/actions/setup-zig/: action.yml
.github/workflows/: ci.yml  release.yml
bindings/: README.md
bindings/c/: README.md
bindings/c/examples/: smoke.c
bindings/c/tests/: regression.c
bindings/cpp/: README.md
bindings/cpp/examples/: smoke.cpp
bindings/cpp/include/: nexaloid.hpp
bindings/cpp/tests/: regression.cpp
bindings/go/: README.md  go.mod
bindings/go/nexaloid/: nexaloid.go  nexaloid_test.go
bindings/node/: README.md  binding.gyp  index.js  package.json  platform.js
bindings/node/examples/: smoke.js
bindings/node/scripts/: check-prebuild.js  stage-local.js
bindings/node/src/: nexaloid_node.c
bindings/node/test/: regression.js
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/src/nexaloid/: __init__.py  compat_jieba.py  token.py  tokenizer.py
bindings/rust/nexaloid/: Cargo.toml  README.md  build.rs
bindings/rust/nexaloid-sys/: Cargo.toml  README.md  build.rs
bindings/rust/nexaloid-sys-darwin-arm64/: Cargo.toml
bindings/rust/nexaloid-sys-darwin-x64/: Cargo.toml
bindings/rust/nexaloid-sys-linux-arm64/: Cargo.toml
bindings/rust/nexaloid-sys-linux-armv7/: Cargo.toml
bindings/rust/nexaloid-sys-linux-armv7/src/: lib.rs
bindings/rust/nexaloid-sys-linux-musl/: Cargo.toml  build.rs
bindings/rust/nexaloid-sys-linux-x64/: Cargo.toml
bindings/rust/nexaloid-sys-riscv64/: Cargo.toml
bindings/rust/nexaloid-sys-windows-arm64/: Cargo.toml
bindings/rust/nexaloid-sys-windows-x64/: Cargo.toml
bindings/rust/nexaloid-sys/data/hmm/: bmes_hmm_wordhub_lattice.json  bmes_hmm_wordhub_lattice.manifest.json
bindings/rust/nexaloid-sys/src/: lib.rs
bindings/rust/nexaloid/examples/: regression.rs  smoke.rs
bindings/rust/nexaloid/src/: lib.rs
bindings/zig/: README.md  build.zig  nexaloid.zig
bindings/zig/examples/: smoke.zig
bindings/zig/tests/: regression.zig
core/: build.zig
core/include/: nexaloid.h  nexaloid_plugin.h
core/src/: nexaloid_ffi.zig  root.zig  tokenizer.zig  types.zig
core/src/decoder/: viterbi.zig
core/src/lattice/: lattice.zig
core/src/lexicon/: trie.zig
core/src/matcher/: builtin_rules.zig  custom_rule_matcher.zig  custom_rule_parser.zig  custom_rule_types.zig  custom_rules.zig  matcher.zig  rule_config.zig  rule_matcher.zig
core/src/plugin/: loader.zig
core/src/scanner/: utf8.zig
data/badcases/: core.json  core.yaml  rules_v3.json  rules_v4.json
data/dict/: demote.tsv  overlay.tsv
data/entity/: README.md
data/hmm/: bmes_hmm_wordhub_lattice.json.sha256  bmes_hmm_wordhub_lattice.manifest.json  bmes_hmm_wordhub_lattice.nxhmm  bmes_hmm_wordhub_lattice.nxhmm.sha256  hmm_score_audit.tsv
data/rules/: v3_sample_rules.json  v4_sample_rules.json
docs/: jieba_compat.md
examples/: regression.c  regression.cpp  regression.zig
include/: nexaloid.h  nexaloid.hpp
plugins/: entity_bmes_plugin.zig  hmm_lattice_plugin.zig
tools/: badcase_runner.py  benchmark.py  check_hmm_artifact.py  demo_candidate_plugin.c  dict_builder.py  entity_plugin_benchmark.py  fetch_entity_bmes_release.py  generate_release_evidence.py  generate_traditional_overlay.py  hmm_lattice_plugin.zig  hmm_score_audit.py  import_nexaloid_data.py  npm_package_regression.py  nxdict_builder.py  package_native_sdk.py  platform_tag.py  plugin_integration_checks.py  regression_checks.py  rule_audit.py  rust_portability_regression.py  set_release_version.py  smoke_npm_package.py  stage_assets.py  stage_language_release_branch.py  stress_core.c  supply_chain_lint.py  validate_overlay.py
