[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexaloid"
version = "0.0.0.dev0"
description = "Chinese tokenizer runtime"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nexaloid = ["native/*", "data/dict/*", "data/hmm/*", "data/entity/*"]
