[package]
name = "nexaloid-sys-darwin-x64"
version = "0.0.0-dev.0"
edition = "2021"
description = "macOS x64 native library for nexaloid-sys"
license = "Apache-2.0"
repository = "https://github.com/Nexaloid/Nexaloid"
links = "nexaloid_prebuilt_darwin_x64"
build = "build.rs"
include = ["build.rs", "src/**", "native/**", "Cargo.toml"]

[lib]
path = "src/lib.rs"
