[package]
name = "nexaloid-sys"
version = "0.1.0-alpha.1"
edition = "2021"
description = "C ABI bindings for the Nexaloid Chinese tokenizer runtime"
license = "Apache-2.0"
repository = "https://github.com/Nexaloid/Nexaloid"
build = "build.rs"
include = ["build.rs", "src/**", "native/**", "Cargo.toml"]

[lib]
path = "src/lib.rs"
